--- a/exam/data/html/exam/tpls/app/index.html
+++ b/exam/data/html/exam/tpls/app/index.html
@@ -28,7 +28,8 @@
     	<div class="logo left"><img src="/Public/Home/images/logo.jpg"  /></div>
         <div class="jiansuo right">
         	<ul>
-            								<li><a href="index.php?user-app-center">个人中心</a></li>
+            	
+							<li><a href="index.php?user-app-center">个人中心</a></li>
 							<li><a href="index.php?user-app-logout">退出</a></li>
             </ul>
             
@@ -97,7 +98,99 @@
 					</li>
 				</ul>
 				<ul class="thumbnails">
-									</ul>
+										<li class="span2">
+						<div class="thumbnail">
+							<img alt="300x200" src="app/exam/styles/image/paper.png"/>
+							<div class="caption">
+								<p class="text-center">
+									<a class="ajax btn btn-primary" href="index.php?exam-app-index-setCurrentBasic&basicid=19" title="fasdfas">fasdfas</a>
+								</p>
+							</div>
+						</div>
+					</li>
+															<li class="span2">
+						<div class="thumbnail">
+							<img alt="300x200" src="app/exam/styles/image/paper.png"/>
+							<div class="caption">
+								<p class="text-center">
+									<a class="ajax btn btn-primary" href="index.php?exam-app-index-setCurrentBasic&basicid=18" title="技巧">技巧</a>
+								</p>
+							</div>
+						</div>
+					</li>
+															<li class="span2">
+						<div class="thumbnail">
+							<img alt="300x200" src="app/exam/styles/image/paper.png"/>
+							<div class="caption">
+								<p class="text-center">
+									<a class="ajax btn btn-primary" href="index.php?exam-app-index-setCurrentBasic&basicid=17" title="考试">考试</a>
+								</p>
+							</div>
+						</div>
+					</li>
+															<li class="span2">
+						<div class="thumbnail">
+							<img alt="300x200" src="app/exam/styles/image/paper.png"/>
+							<div class="caption">
+								<p class="text-center">
+									<a class="ajax btn btn-primary" href="index.php?exam-app-index-setCurrentBasic&basicid=16" title="小试卷">小试卷</a>
+								</p>
+							</div>
+						</div>
+					</li>
+															<li class="span2">
+						<div class="thumbnail">
+							<img alt="300x200" src="app/exam/styles/image/paper.png"/>
+							<div class="caption">
+								<p class="text-center">
+									<a class="ajax btn btn-primary" href="index.php?exam-app-index-setCurrentBasic&basicid=14" title="adsfsf">adsfsf</a>
+								</p>
+							</div>
+						</div>
+					</li>
+															<li class="span2">
+						<div class="thumbnail">
+							<img alt="300x200" src="app/exam/styles/image/paper.png"/>
+							<div class="caption">
+								<p class="text-center">
+									<a class="ajax btn btn-primary" href="index.php?exam-app-index-setCurrentBasic&basicid=13" title="sdfsaf">sdfsaf</a>
+								</p>
+							</div>
+						</div>
+					</li>
+										</ul>
+					<ul class="thumbnails">
+															<li class="span2">
+						<div class="thumbnail">
+							<img alt="300x200" src="app/exam/styles/image/paper.png"/>
+							<div class="caption">
+								<p class="text-center">
+									<a class="ajax btn btn-primary" href="index.php?exam-app-index-setCurrentBasic&basicid=12" title="sdfsa">sdfsa</a>
+								</p>
+							</div>
+						</div>
+					</li>
+															<li class="span2">
+						<div class="thumbnail">
+							<img alt="300x200" src="app/exam/styles/image/paper.png"/>
+							<div class="caption">
+								<p class="text-center">
+									<a class="ajax btn btn-primary" href="index.php?exam-app-index-setCurrentBasic&basicid=11" title="2222">2222</a>
+								</p>
+							</div>
+						</div>
+					</li>
+															<li class="span2">
+						<div class="thumbnail">
+							<img alt="300x200" src="app/exam/styles/image/paper.png"/>
+							<div class="caption">
+								<p class="text-center">
+									<a class="ajax btn btn-primary" href="index.php?exam-app-index-setCurrentBasic&basicid=10" title="临床">临床</a>
+								</p>
+							</div>
+						</div>
+					</li>
+														</ul>
 			</div>
 		</div>
 	</div>
