--- a/exam/data/html/exam/tpls/app/basics_open.html
+++ b/exam/data/html/exam/tpls/app/basics_open.html
@@ -28,7 +28,8 @@
     	<div class="logo left"><img src="/Public/Home/images/logo.jpg"  /></div>
         <div class="jiansuo right">
         	<ul>
-            								<li><a href="index.php?user-app-center">个人中心</a></li>
+            	
+							<li><a href="index.php?user-app-center">个人中心</a></li>
 							<li><a href="index.php?user-app-logout">退出</a></li>
             </ul>
             
@@ -163,6 +164,7 @@
 							  									  		<option value="5">临床2</option>
 							  									  		<option value="6">临床3</option>
 							  									  		<option value="7">考核</option>
+							  									  		<option value="8">技巧</option>
 							  								  		</select>
 				        	</td>
 							<td>
@@ -178,13 +180,39 @@
 		            <ul class="thumbnails">
 												<li class="span2">
 							<div class="thumbnail">
+								<a class="thumbnail" href="index.php?exam-app-basics-detail&basicid=19" title="fasdfas"><img alt="300x200" src="app/exam/styles/image/paper.png" style="width:160px;"/></a>
+								<div class="caption">
+									<div class="text-center">
+										<h6>fasdfas</h6>
+										<p>
+																				<a class="btn" href="javascript:;" title="fasdfas">已开通</a>
+																				</p>
+									</div>
+								</div>
+							</div>
+						</li>
+																		<li class="span2">
+							<div class="thumbnail">
+								<a class="thumbnail" href="index.php?exam-app-basics-detail&basicid=18" title="技巧"><img alt="300x200" src="app/exam/styles/image/paper.png" style="width:160px;"/></a>
+								<div class="caption">
+									<div class="text-center">
+										<h6>技巧</h6>
+										<p>
+																				<a class="btn" href="javascript:;" title="技巧">已开通</a>
+																				</p>
+									</div>
+								</div>
+							</div>
+						</li>
+																		<li class="span2">
+							<div class="thumbnail">
 								<a class="thumbnail" href="index.php?exam-app-basics-detail&basicid=17" title="考试"><img alt="300x200" src="app/exam/styles/image/paper.png" style="width:160px;"/></a>
 								<div class="caption">
 									<div class="text-center">
 										<h6>考试</h6>
 										<p>
-																																<a class="btn btn-primary" href="index.php?exam-app-basics-detail&basicid=17" title="考试">去开通</a>
-																															</p>
+																				<a class="btn" href="javascript:;" title="考试">已开通</a>
+																				</p>
 									</div>
 								</div>
 							</div>
@@ -209,8 +237,8 @@
 									<div class="text-center">
 										<h6>adsfsf</h6>
 										<p>
-																																<a class="btn btn-primary" href="index.php?exam-app-basics-detail&basicid=14" title="adsfsf">去开通</a>
-																															</p>
+																				<a class="btn" href="javascript:;" title="adsfsf">已开通</a>
+																				</p>
 									</div>
 								</div>
 							</div>
@@ -222,12 +250,14 @@
 									<div class="text-center">
 										<h6>sdfsaf</h6>
 										<p>
-																																<a class="btn btn-primary" href="index.php?exam-app-basics-detail&basicid=13" title="sdfsaf">去开通</a>
-																															</p>
+																				<a class="btn" href="javascript:;" title="sdfsaf">已开通</a>
+																				</p>
 									</div>
 								</div>
 							</div>
 						</li>
+												</ul>
+						<ul class="thumbnails">
 																		<li class="span2">
 							<div class="thumbnail">
 								<a class="thumbnail" href="index.php?exam-app-basics-detail&basicid=12" title="sdfsa"><img alt="300x200" src="app/exam/styles/image/paper.png" style="width:160px;"/></a>
@@ -235,8 +265,8 @@
 									<div class="text-center">
 										<h6>sdfsa</h6>
 										<p>
-																																<a class="btn btn-primary" href="index.php?exam-app-basics-detail&basicid=12" title="sdfsa">去开通</a>
-																															</p>
+																				<a class="btn" href="javascript:;" title="sdfsa">已开通</a>
+																				</p>
 									</div>
 								</div>
 							</div>
@@ -248,14 +278,12 @@
 									<div class="text-center">
 										<h6>2222</h6>
 										<p>
-																																<a class="btn btn-success" href="index.php?exam-app-basics-detail&basicid=11" title="2222">免费开通</a>
-																															</p>
+																				<a class="btn" href="javascript:;" title="2222">已开通</a>
+																				</p>
 									</div>
 								</div>
 							</div>
 						</li>
-												</ul>
-						<ul class="thumbnails">
 																		<li class="span2">
 							<div class="thumbnail">
 								<a class="thumbnail" href="index.php?exam-app-basics-detail&basicid=10" title="临床"><img alt="300x200" src="app/exam/styles/image/paper.png" style="width:160px;"/></a>
@@ -263,8 +291,8 @@
 									<div class="text-center">
 										<h6>临床</h6>
 										<p>
-																																<a class="btn btn-success" href="index.php?exam-app-basics-detail&basicid=10" title="临床">免费开通</a>
-																															</p>
+																				<a class="btn" href="javascript:;" title="临床">已开通</a>
+																				</p>
 									</div>
 								</div>
 							</div>
