--- a/exam/data/html/exam/tpls/app/exam.html
+++ b/exam/data/html/exam/tpls/app/exam.html
@@ -28,7 +28,8 @@
     	<div class="logo left"><img src="/Public/Home/images/logo.jpg"  /></div>
         <div class="jiansuo right">
         	<ul>
-            								<li><a href="index.php?user-app-center">个人中心</a></li>
+            	
+							<li><a href="index.php?user-app-center">个人中心</a></li>
 							<li><a href="index.php?user-app-logout">退出</a></li>
             </ul>
             
@@ -84,7 +85,7 @@
 						<span class="icon-home"></span> <a href="index.php">考场选择</a> <span class="divider">/</span>
 					</li>
 					<li>
-						<a href="index.php?exam-app-basics">小试卷</a> <span class="divider">/</span>
+						<a href="index.php?exam-app-basics">技巧</a> <span class="divider">/</span>
 					</li>
 					<li class="active">
 						正式考试
@@ -97,7 +98,7 @@
 				</ul>
 				<div class="alert alert-info">
 					<strong>提示：</strong>
-					<p>本考场开启时间 不限 ； 考试次数 不限 ； 抽卷规则 系统随机抽卷。</p>
+					<p>本考场开启时间 1970-01-01 08:33:34 - 1970-01-01 08:33:34 ； 考试次数 1 ； 抽卷规则 系统随机抽卷。</p>
 				</div>
             	<ul class="unstyled">
                 	<li><b>1、</b>点击考试名称按钮进入答题界面，考试开始计时。</li>
@@ -106,12 +107,8 @@
                 	<li><b>4、</b>系统自动记录模拟考试的考试记录，学员考试结束后可以进入“答题记录”功能进行查看。</li>
                 	<li>&nbsp;</li>
                 </ul>
-												<div>
-					<div class="span4"></div>
-										<div class="span4 text-center"><a class="ajax btn btn-primary" href="index.php?exam-app-exam-selectquestions&examid=">开始考试</a></div>
-										<div class="span4"></div>
-				</div>
-											</div>
+															<p class="alert">本考场开放考试时间为：1970-01-01 08:33:34 - 1970-01-01 08:33:34，目前不是考试时间，请在规定时间内前来考试哦。</p>
+												</div>
 		</div>
 	</div>
 </div>
