--- a/exam/data/html/exam/tpls/master/exams.html
+++ b/exam/data/html/exam/tpls/master/exams.html
@@ -101,6 +101,66 @@
 	            <tbody>
                     			        <tr>
 						<td>
+							12						</td>
+						<td>
+							哈哈						</td>
+						<td>
+							hongmomanu						</td>
+						<td>
+							随机组卷						</td>
+						<td>
+							2015-06-08						</td>
+						<td>
+							考核						</td>
+						<td>
+							<div class="btn-group">
+	                    		<a class="btn" href="index.php?exam-master-exams-modify&page=&examid=12" title="修改"><em class="icon-edit"></em></a>
+								<a class="btn confirm" href="index.php?exam-master-exams-del&page=&examid=12" title="删除"><em class="icon-remove"></em></a>
+	                    	</div>
+						</td>
+			        </tr>
+			        			        <tr>
+						<td>
+							11						</td>
+						<td>
+							测试1						</td>
+						<td>
+							hongmomanu						</td>
+						<td>
+							随机组卷						</td>
+						<td>
+							2015-06-08						</td>
+						<td>
+							临床						</td>
+						<td>
+							<div class="btn-group">
+	                    		<a class="btn" href="index.php?exam-master-exams-modify&page=&examid=11" title="修改"><em class="icon-edit"></em></a>
+								<a class="btn confirm" href="index.php?exam-master-exams-del&page=&examid=11" title="删除"><em class="icon-remove"></em></a>
+	                    	</div>
+						</td>
+			        </tr>
+			        			        <tr>
+						<td>
+							10						</td>
+						<td>
+							tese						</td>
+						<td>
+							hongmomanu						</td>
+						<td>
+							手工组卷						</td>
+						<td>
+							2015-06-08						</td>
+						<td>
+							临床						</td>
+						<td>
+							<div class="btn-group">
+	                    		<a class="btn" href="index.php?exam-master-exams-modify&page=&examid=10" title="修改"><em class="icon-edit"></em></a>
+								<a class="btn confirm" href="index.php?exam-master-exams-del&page=&examid=10" title="删除"><em class="icon-remove"></em></a>
+	                    	</div>
+						</td>
+			        </tr>
+			        			        <tr>
+						<td>
 							9						</td>
 						<td>
 							lingchang						</td>
