--- a/exam/data/html/exam/tpls/app/basics_detail.html
+++ b/exam/data/html/exam/tpls/app/basics_detail.html
@@ -28,7 +28,8 @@
     	<div class="logo left"><img src="/Public/Home/images/logo.jpg"  /></div>
         <div class="jiansuo right">
         	<ul>
-            								<li><a href="index.php?user-app-center">个人中心</a></li>
+            	
+							<li><a href="index.php?user-app-center">个人中心</a></li>
 							<li><a href="index.php?user-app-logout">退出</a></li>
             </ul>
             
@@ -87,7 +88,7 @@
 						<a href="index.php?exam-app-basics-open">开通考场</a> <span class="divider">/</span>
 					</li>
 					<li class="active">
-						sdfsa					</li>
+						临床					</li>
 				</ul>
 				<ul class="nav nav-tabs">
 					<li class="active">
@@ -102,18 +103,16 @@
 					<div class="span1"></div>
 					<div class="span7">
 						<div class="caption">
-							<h3>sdfsa</h3>
+							<h3>临床</h3>
 							<p>&nbsp;</p>
-							<p>科目：临床3</p>
-							<p>地区：深圳</p>
+							<p>科目：临床</p>
+							<p>地区：全国</p>
 							<p>您现有积分：0 （<a href="index.php?user-center-payfor">支付宝充值</a> / <a href="#myModal" role="button" data-toggle="modal">代金券充值</a>）</p>
-													</div>
+							<p>到期时间：2018-06-07</p>						</div>
 						<div>&nbsp;</div>
-												<form action="index.php?exam-app-basics-openit" method="post">
-																							<p>
-									<input class="btn" value="请管理员先在后台设置价格" type="button"/>
-								</p>
-																					</form>
+												<p>
+							<input class="btn" value="已开通" type="button"/>
+						</p>
 											</div>
 				</div>
 				<div class="pagination pagination-right">
