--- a/exam/data/html/exam/tpls/master/recyle_questions.html
+++ b/exam/data/html/exam/tpls/master/recyle_questions.html
@@ -23,7 +23,7 @@
 <script type="text/javascript" src="app/core/styles/js/swfu/swfupload.js"></script>
 <script type="text/javascript" src="app/core/styles/js/plugin.js"></script>
 </head><body>
-<div class="navbar navbar-inverse">	<div class="navbar-inner">		<div class="container-fluid">			<button data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar" type="button"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>			<a href="index.php" target="_blank" class="brand"><img src="app/core/styles/images/favicon.png">考试系统管理平台</a>			<div class="nav-collapse navbar-responsive-collapse collapse">				<ul class="nav">					<li>						<a href="index.php?core-master">全局</a>					</li>															<li>						<a href="index.php?user-master">用户模块</a>					</li>																				<li class="active">						<a href="index.php?exam-master">考试模块</a>					</li>																																								<li>						<a href="index.php?content-master">内容模块</a>					</li>																				<li>						<a href="index.php?bank-master">财务模块</a>					</li>														</ul>				<ul class="nav pull-right">					<li>						<a href="index.php">网站首页</a>					</li>					<li class="divider-vertical">					</li>					<li class="dropdown">						<a data-toggle="dropdown" class="dropdown-toggle" href="#">peadmin<strong class="caret"></strong></a>						<ul class="dropdown-menu">							<!--							<li>								<a href="index.php?user-app-privatement">个人中心</a>							</li>							<li class="divider">							</li>							-->							<li>								<a href="index.php?core-master-logout">退出管理</a>							</li>						</ul>					</li>				</ul>			</div>		</div>	</div></div><div class="container-fluid">
+<div class="navbar navbar-inverse">	<div class="navbar-inner">		<div class="container-fluid">			<button data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar" type="button"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>			<a href="index.php" target="_blank" class="brand"><img src="app/core/styles/images/favicon.png">考试系统管理平台</a>			<div class="nav-collapse navbar-responsive-collapse collapse">				<ul class="nav">					<li>						<a href="index.php?core-master">全局</a>					</li>															<li>						<a href="index.php?user-master">用户模块</a>					</li>																				<li class="active">						<a href="index.php?exam-master">考试模块</a>					</li>																																								<li>						<a href="index.php?content-master">内容模块</a>					</li>																				<li>						<a href="index.php?bank-master">财务模块</a>					</li>														</ul>				<ul class="nav pull-right">					<li>						<a href="index.php">网站首页</a>					</li>					<li class="divider-vertical">					</li>					<li class="dropdown">						<a data-toggle="dropdown" class="dropdown-toggle" href="#">hongmomanu<strong class="caret"></strong></a>						<ul class="dropdown-menu">							<!--							<li>								<a href="index.php?user-app-privatement">个人中心</a>							</li>							<li class="divider">							</li>							-->							<li>								<a href="index.php?core-master-logout">退出管理</a>							</li>						</ul>					</li>				</ul>			</div>		</div>	</div></div><div class="container-fluid">
 	<div class="row-fluid">
 		<div class="span2">
 			<div class="accordion" id="accordion-13465">	<div class="accordion-group">		<div class="accordion-heading">			<a class="accordion-toggle" data-parent="#accordion-13465" data-toggle="collapse" href="#accordion-element-707348">考试设计 </a>		</div>		<div class="accordion-body collapse" id="accordion-element-707348">			<div class="accordion-inner">				<ul class="unstyled">					<li><a href="?exam-master-basic">考场列表</a></li>		    		<li><a href="?exam-master-basic-area">地区设置</a></li>		    		<li><a href="?exam-master-basic-subject">科目管理</a></li>		    		<li><a href="?exam-master-basic-questype">题型管理</a></li>				</ul>			</div>		</div>	</div>	<div class="accordion-group">		<div class="accordion-heading">			<a class="accordion-toggle" data-parent="#accordion-13465" data-toggle="collapse" href="#accordion-element-2120761">课程开通 </a>		</div>		<div class="accordion-body collapse" id="accordion-element-2120761">			<div class="accordion-inner">				<ul class="unstyled">					<li><a href="index.php?exam-master-users">开通课程</a></li>					<!--<li><a href="index.php?exam-master-rowsquestions">成绩管理</a></li>-->				</ul>			</div>		</div>	</div>	<div class="accordion-group">		<div class="accordion-heading">			<a class="accordion-toggle" data-parent="#accordion-13465" data-toggle="collapse" href="#accordion-element-212076">试题管理 </a>		</div>		<div class="accordion-body collapse" id="accordion-element-212076">			<div class="accordion-inner">				<ul class="unstyled">					<li><a href="index.php?exam-master-questions">普通试题管理</a></li>					<li><a href="index.php?exam-master-rowsquestions">题帽题管理</a></li>				</ul>			</div>		</div>	</div>	<div class="accordion-group">		<div class="accordion-heading">			<a class="accordion-toggle" data-parent="#accordion-13465" data-toggle="collapse" href="#accordion-element-212096">试卷管理 </a>		</div>		<div class="accordion-body collapse" id="accordion-element-212096">			<div class="accordion-inner">				<ul class="unstyled">					<li><a href="index.php?exam-master-exams">试卷列表</a></li>					<li><a href="index.php?exam-master-exams-autopage">随机组卷</a></li>					<li><a href="index.php?exam-master-exams-selfpage">手工组卷</a></li>				</ul>			</div>		</div>	</div>	<div class="accordion-group">		<div class="accordion-heading">			<a class="accordion-toggle" data-parent="#accordion-13465" data-toggle="collapse" href="#accordion-element-212090">回收站 </a>		</div>		<div class="accordion-body in collapse" id="accordion-element-212090">			<div class="accordion-inner">				<ul class="unstyled">					<li><a href="index.php?exam-master-recyle">普通试题</a></li>					<li><a href="index.php?exam-master-recyle-rows">题帽题</a></li>					<li><a href="index.php?exam-master-recyle-knows">知识点</a></li>				</ul>			</div>		</div>	</div></div>		</div>
@@ -50,112 +50,7 @@
 	                </tr>
 	            </thead>
 	            <tbody>
-                    			        <tr>
-						<td>
-							773						</td>
-						<td>
-													</td>
-						<td>
-							<a title="查看试题" class="selfmodal" href="javascript:;" url="index.php?exam-master-questions-detail&questionid=773" data-target="#modal">描述抗战史著名战役和时间</a>
-						</td>
-						<td>
-							peadmin						</td>
-						<td>
-							2013-08-20						</td>
-						<td>
-							难						</td>
-						<td>
-							<div class="btn-group">
-	                    		<a class="btn ajax" href="index.php?exam-master-questions-backquestion&page=1&questionid=773" title="恢复本题将会恢复本题下所有已删除子题"><em class="icon-edit"></em></a>
-								<a class="btn confirm" href="index.php?exam-master-recyle-finaldelquestion&questionparent=0&page=1&questionid=773" title="彻底删除"><em class="icon-remove"></em></a>
-	                    	</div>
-						</td>
-			        </tr>
-			        			        <tr>
-						<td>
-							771						</td>
-						<td>
-													</td>
-						<td>
-							<a title="查看试题" class="selfmodal" href="javascript:;" url="index.php?exam-master-questions-detail&questionid=771" data-target="#modal">这是一个问答题</a>
-						</td>
-						<td>
-							redrangon						</td>
-						<td>
-							2013-07-11						</td>
-						<td>
-							易						</td>
-						<td>
-							<div class="btn-group">
-	                    		<a class="btn ajax" href="index.php?exam-master-questions-backquestion&page=1&questionid=771" title="恢复本题将会恢复本题下所有已删除子题"><em class="icon-edit"></em></a>
-								<a class="btn confirm" href="index.php?exam-master-recyle-finaldelquestion&questionparent=0&page=1&questionid=771" title="彻底删除"><em class="icon-remove"></em></a>
-	                    	</div>
-						</td>
-			        </tr>
-			        			        <tr>
-						<td>
-							715						</td>
-						<td>
-													</td>
-						<td>
-							<a title="查看试题" class="selfmodal" href="javascript:;" url="index.php?exam-master-questions-detail&questionid=715" data-target="#modal">党员领导干部不准利用知悉的内幕信息谋取利益。</a>
-						</td>
-						<td>
-													</td>
-						<td>
-							2013-06-26						</td>
-						<td>
-							易						</td>
-						<td>
-							<div class="btn-group">
-	                    		<a class="btn ajax" href="index.php?exam-master-questions-backquestion&page=1&questionid=715" title="恢复本题将会恢复本题下所有已删除子题"><em class="icon-edit"></em></a>
-								<a class="btn confirm" href="index.php?exam-master-recyle-finaldelquestion&questionparent=0&page=1&questionid=715" title="彻底删除"><em class="icon-remove"></em></a>
-	                    	</div>
-						</td>
-			        </tr>
-			        			        <tr>
-						<td>
-							714						</td>
-						<td>
-													</td>
-						<td>
-							<a title="查看试题" class="selfmodal" href="javascript:;" url="index.php?exam-master-questions-detail&questionid=714" data-target="#modal">党员领导干部离职或者退休二年后,可以接受原任职务管辖的地区和业务范围内的民营企业、外商投资...</a>
-						</td>
-						<td>
-													</td>
-						<td>
-							2013-06-26						</td>
-						<td>
-							易						</td>
-						<td>
-							<div class="btn-group">
-	                    		<a class="btn ajax" href="index.php?exam-master-questions-backquestion&page=1&questionid=714" title="恢复本题将会恢复本题下所有已删除子题"><em class="icon-edit"></em></a>
-								<a class="btn confirm" href="index.php?exam-master-recyle-finaldelquestion&questionparent=0&page=1&questionid=714" title="彻底删除"><em class="icon-remove"></em></a>
-	                    	</div>
-						</td>
-			        </tr>
-			        			        <tr>
-						<td>
-							713						</td>
-						<td>
-													</td>
-						<td>
-							<a title="查看试题" class="selfmodal" href="javascript:;" url="index.php?exam-master-questions-detail&questionid=713" data-target="#modal">党员领导干部不准挪用或者拆借社会保障基金、住房公积金等公共资金或者其他财政资金。</a>
-						</td>
-						<td>
-													</td>
-						<td>
-							2013-06-26						</td>
-						<td>
-							易						</td>
-						<td>
-							<div class="btn-group">
-	                    		<a class="btn ajax" href="index.php?exam-master-questions-backquestion&page=1&questionid=713" title="恢复本题将会恢复本题下所有已删除子题"><em class="icon-edit"></em></a>
-								<a class="btn confirm" href="index.php?exam-master-recyle-finaldelquestion&questionparent=0&page=1&questionid=713" title="彻底删除"><em class="icon-remove"></em></a>
-	                    	</div>
-						</td>
-			        </tr>
-			        	        	</tbody>
+                    	        	</tbody>
 	        </table>
 			<div class="pagination pagination-right">
 				<ul></ul>
