--- a/exam/data/html/exam/tpls/app/basics.html
+++ b/exam/data/html/exam/tpls/app/basics.html
@@ -87,7 +87,7 @@
 						<span class="icon-home"></span> <a href="index.php">考场选择</a> <span class="divider">/</span>
 					</li>
 					<li class="active">
-						技巧
+						我的考场
 					</li>
 				</ul>
 				<ul class="nav nav-tabs">
