--- a/exam/data/html/exam/tpls/app/basics_detail.html
+++ b/exam/data/html/exam/tpls/app/basics_detail.html
@@ -88,7 +88,7 @@
 						<a href="index.php?exam-app-basics-open">开通考场</a> <span class="divider">/</span>
 					</li>
 					<li class="active">
-						临床					</li>
+						我的考场					</li>
 				</ul>
 				<ul class="nav nav-tabs">
 					<li class="active">
@@ -103,7 +103,7 @@
 					<div class="span1"></div>
 					<div class="span7">
 						<div class="caption">
-							<h3>临床</h3>
+							<h3>我的考场</h3>
 							<p>&nbsp;</p>
 							<p>科目：临床</p>
 							<p>地区：全国</p>
