--- a/exam/data/html/exam/tpls/app/exampaper.html
+++ b/exam/data/html/exam/tpls/app/exampaper.html
@@ -85,7 +85,7 @@
 						<span class="icon-home"></span> <a href="index.php">考场选择</a> <span class="divider">/</span>
 					</li>
 					<li>
-						<a href="index.php?exam-app-basics">技巧</a> <span class="divider">/</span>
+						<a href="index.php?exam-app-basics">我的考场</a> <span class="divider">/</span>
 					</li>
 					<li class="active">
 						模拟考试
@@ -109,7 +109,7 @@
 							<img src="app/core/styles/images/icons/Clipboard.png"/>
 							<div class="caption">
 								<p class="text-center">
-									<a class="ajax btn btn-primary" href="index.php?exam-app-exampaper-selectquestions&examid=8" title="技巧">技巧</a>
+									<a class="ajax btn btn-primary" href="index.php?exam-app-exampaper-selectquestions&examid=10" title="tese">tese</a>
 								</p>
 							</div>
 						</div>
