--- a/exam/data/html/exam/tpls/app/history.html
+++ b/exam/data/html/exam/tpls/app/history.html
@@ -85,7 +85,7 @@
 						<span class="icon-home"></span> <a href="index.php">考场选择</a> <span class="divider">/</span>
 					</li>
 					<li>
-						<a href="index.php?exam-app-basics">临床</a> <span class="divider">/</span>
+						<a href="index.php?exam-app-basics">我的考场</a> <span class="divider">/</span>
 					</li>
 					<li class="active">
 						考试记录
