--- a/exam/data/html/exam/tpls/master/basic.html
+++ b/exam/data/html/exam/tpls/master/basic.html
@@ -145,21 +145,21 @@
 		            <tbody>
 		                				        <tr>
 							<td>
-								<input type="checkbox" name="delids[19]" value="1"/>
+								<input type="checkbox" name="delids[20]" value="1"/>
 							</td>
 							<td>
-								19							</td>
+								20							</td>
 							<td>
-								fasdfas							</td>
+								我的考场							</td>
 							<td>
 								全国							</td>
 							<td>
 								临床							</td>
 							<td>
 								<div class="btn-group">
-									<a class="btn" href="index.php?exam-master-basic-setexamrange&page=&basicid=19" title="考试范围"><em class="icon-cog"></em></a>
-									<a class="btn" href="index.php?exam-master-basic-modifybasic&page=&basicid=19" title="修改"><em class="icon-edit"></em></a>
-									<a class="btn confirm" href="index.php?exam-master-basic-delbasic&basicid=19&page=" title="删除"><em class="icon-remove"></em></a>
+									<a class="btn" href="index.php?exam-master-basic-setexamrange&page=&basicid=20" title="考试范围"><em class="icon-cog"></em></a>
+									<a class="btn" href="index.php?exam-master-basic-modifybasic&page=&basicid=20" title="修改"><em class="icon-edit"></em></a>
+									<a class="btn confirm" href="index.php?exam-master-basic-delbasic&basicid=20&page=" title="删除"><em class="icon-remove"></em></a>
 								</div>
 							</td>
 				        </tr>
@@ -180,126 +180,6 @@
 									<a class="btn" href="index.php?exam-master-basic-setexamrange&page=&basicid=18" title="考试范围"><em class="icon-cog"></em></a>
 									<a class="btn" href="index.php?exam-master-basic-modifybasic&page=&basicid=18" title="修改"><em class="icon-edit"></em></a>
 									<a class="btn confirm" href="index.php?exam-master-basic-delbasic&basicid=18&page=" title="删除"><em class="icon-remove"></em></a>
-								</div>
-							</td>
-				        </tr>
-				        				        <tr>
-							<td>
-								<input type="checkbox" name="delids[17]" value="1"/>
-							</td>
-							<td>
-								17							</td>
-							<td>
-								考试							</td>
-							<td>
-								全国							</td>
-							<td>
-								临床							</td>
-							<td>
-								<div class="btn-group">
-									<a class="btn" href="index.php?exam-master-basic-setexamrange&page=&basicid=17" title="考试范围"><em class="icon-cog"></em></a>
-									<a class="btn" href="index.php?exam-master-basic-modifybasic&page=&basicid=17" title="修改"><em class="icon-edit"></em></a>
-									<a class="btn confirm" href="index.php?exam-master-basic-delbasic&basicid=17&page=" title="删除"><em class="icon-remove"></em></a>
-								</div>
-							</td>
-				        </tr>
-				        				        <tr>
-							<td>
-								<input type="checkbox" name="delids[16]" value="1"/>
-							</td>
-							<td>
-								16							</td>
-							<td>
-								小试卷							</td>
-							<td>
-								安徽							</td>
-							<td>
-								临床3							</td>
-							<td>
-								<div class="btn-group">
-									<a class="btn" href="index.php?exam-master-basic-setexamrange&page=&basicid=16" title="考试范围"><em class="icon-cog"></em></a>
-									<a class="btn" href="index.php?exam-master-basic-modifybasic&page=&basicid=16" title="修改"><em class="icon-edit"></em></a>
-									<a class="btn confirm" href="index.php?exam-master-basic-delbasic&basicid=16&page=" title="删除"><em class="icon-remove"></em></a>
-								</div>
-							</td>
-				        </tr>
-				        				        <tr>
-							<td>
-								<input type="checkbox" name="delids[14]" value="1"/>
-							</td>
-							<td>
-								14							</td>
-							<td>
-								adsfsf							</td>
-							<td>
-								吉林							</td>
-							<td>
-								临床3							</td>
-							<td>
-								<div class="btn-group">
-									<a class="btn" href="index.php?exam-master-basic-setexamrange&page=&basicid=14" title="考试范围"><em class="icon-cog"></em></a>
-									<a class="btn" href="index.php?exam-master-basic-modifybasic&page=&basicid=14" title="修改"><em class="icon-edit"></em></a>
-									<a class="btn confirm" href="index.php?exam-master-basic-delbasic&basicid=14&page=" title="删除"><em class="icon-remove"></em></a>
-								</div>
-							</td>
-				        </tr>
-				        				        <tr>
-							<td>
-								<input type="checkbox" name="delids[13]" value="1"/>
-							</td>
-							<td>
-								13							</td>
-							<td>
-								sdfsaf							</td>
-							<td>
-								四川							</td>
-							<td>
-								临床							</td>
-							<td>
-								<div class="btn-group">
-									<a class="btn" href="index.php?exam-master-basic-setexamrange&page=&basicid=13" title="考试范围"><em class="icon-cog"></em></a>
-									<a class="btn" href="index.php?exam-master-basic-modifybasic&page=&basicid=13" title="修改"><em class="icon-edit"></em></a>
-									<a class="btn confirm" href="index.php?exam-master-basic-delbasic&basicid=13&page=" title="删除"><em class="icon-remove"></em></a>
-								</div>
-							</td>
-				        </tr>
-				        				        <tr>
-							<td>
-								<input type="checkbox" name="delids[12]" value="1"/>
-							</td>
-							<td>
-								12							</td>
-							<td>
-								sdfsa							</td>
-							<td>
-								深圳							</td>
-							<td>
-								临床3							</td>
-							<td>
-								<div class="btn-group">
-									<a class="btn" href="index.php?exam-master-basic-setexamrange&page=&basicid=12" title="考试范围"><em class="icon-cog"></em></a>
-									<a class="btn" href="index.php?exam-master-basic-modifybasic&page=&basicid=12" title="修改"><em class="icon-edit"></em></a>
-									<a class="btn confirm" href="index.php?exam-master-basic-delbasic&basicid=12&page=" title="删除"><em class="icon-remove"></em></a>
-								</div>
-							</td>
-				        </tr>
-				        				        <tr>
-							<td>
-								<input type="checkbox" name="delids[11]" value="1"/>
-							</td>
-							<td>
-								11							</td>
-							<td>
-								2222							</td>
-							<td>
-								深圳							</td>
-							<td>
-								临床3							</td>
-							<td>
-								<div class="btn-group">
-									<a class="btn" href="index.php?exam-master-basic-setexamrange&page=&basicid=11" title="考试范围"><em class="icon-cog"></em></a>
-									<a class="btn" href="index.php?exam-master-basic-modifybasic&page=&basicid=11" title="修改"><em class="icon-edit"></em></a>
-									<a class="btn confirm" href="index.php?exam-master-basic-delbasic&basicid=11&page=" title="删除"><em class="icon-remove"></em></a>
 								</div>
 							</td>
 				        </tr>
