--- a/exam/data/html/exam/tpls/master/user.html
+++ b/exam/data/html/exam/tpls/master/user.html
@@ -23,7 +23,7 @@
 <script type="text/javascript" src="app/core/styles/js/swfu/swfupload.js"></script>
 <script type="text/javascript" src="app/core/styles/js/plugin.js"></script>
 </head><body>
-<div class="navbar navbar-inverse">	<div class="navbar-inner">		<div class="container-fluid">			<button data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar" type="button"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>			<a href="index.php" target="_blank" class="brand"><img src="app/core/styles/images/favicon.png">考试系统管理平台</a>			<div class="nav-collapse navbar-responsive-collapse collapse">				<ul class="nav">					<li>						<a href="index.php?core-master">全局</a>					</li>															<li>						<a href="index.php?user-master">用户模块</a>					</li>																				<li class="active">						<a href="index.php?exam-master">考试模块</a>					</li>																																								<li>						<a href="index.php?content-master">内容模块</a>					</li>																				<li>						<a href="index.php?bank-master">财务模块</a>					</li>														</ul>				<ul class="nav pull-right">					<li>						<a href="index.php">网站首页</a>					</li>					<li class="divider-vertical">					</li>					<li class="dropdown">						<a data-toggle="dropdown" class="dropdown-toggle" href="#">peadmin<strong class="caret"></strong></a>						<ul class="dropdown-menu">							<!--							<li>								<a href="index.php?user-app-privatement">个人中心</a>							</li>							<li class="divider">							</li>							-->							<li>								<a href="index.php?core-master-logout">退出管理</a>							</li>						</ul>					</li>				</ul>			</div>		</div>	</div></div><div class="container-fluid">
+<div class="navbar navbar-inverse">	<div class="navbar-inner">		<div class="container-fluid">			<button data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar" type="button"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>			<a href="index.php" target="_blank" class="brand"><img src="app/core/styles/images/favicon.png">考试系统管理平台</a>			<div class="nav-collapse navbar-responsive-collapse collapse">				<ul class="nav">					<li>						<a href="index.php?core-master">全局</a>					</li>															<li>						<a href="index.php?user-master">用户模块</a>					</li>																				<li class="active">						<a href="index.php?exam-master">考试模块</a>					</li>																																								<li>						<a href="index.php?content-master">内容模块</a>					</li>																				<li>						<a href="index.php?bank-master">财务模块</a>					</li>														</ul>				<ul class="nav pull-right">					<li>						<a href="index.php">网站首页</a>					</li>					<li class="divider-vertical">					</li>					<li class="dropdown">						<a data-toggle="dropdown" class="dropdown-toggle" href="#">hongmomanu<strong class="caret"></strong></a>						<ul class="dropdown-menu">							<!--							<li>								<a href="index.php?user-app-privatement">个人中心</a>							</li>							<li class="divider">							</li>							-->							<li>								<a href="index.php?core-master-logout">退出管理</a>							</li>						</ul>					</li>				</ul>			</div>		</div>	</div></div><div class="container-fluid">
 	<div class="row-fluid">
 		<div class="span2">
 			<div class="accordion" id="accordion-13465">	<div class="accordion-group">		<div class="accordion-heading">			<a class="accordion-toggle" data-parent="#accordion-13465" data-toggle="collapse" href="#accordion-element-707348">考试设计 </a>		</div>		<div class="accordion-body collapse" id="accordion-element-707348">			<div class="accordion-inner">				<ul class="unstyled">					<li><a href="?exam-master-basic">考场列表</a></li>		    		<li><a href="?exam-master-basic-area">地区设置</a></li>		    		<li><a href="?exam-master-basic-subject">科目管理</a></li>		    		<li><a href="?exam-master-basic-questype">题型管理</a></li>				</ul>			</div>		</div>	</div>	<div class="accordion-group">		<div class="accordion-heading">			<a class="accordion-toggle" data-parent="#accordion-13465" data-toggle="collapse" href="#accordion-element-2120761">课程开通 </a>		</div>		<div class="accordion-body in collapse" id="accordion-element-2120761">			<div class="accordion-inner">				<ul class="unstyled">					<li><a href="index.php?exam-master-users">开通课程</a></li>					<!--<li><a href="index.php?exam-master-rowsquestions">成绩管理</a></li>-->				</ul>			</div>		</div>	</div>	<div class="accordion-group">		<div class="accordion-heading">			<a class="accordion-toggle" data-parent="#accordion-13465" data-toggle="collapse" href="#accordion-element-212076">试题管理 </a>		</div>		<div class="accordion-body collapse" id="accordion-element-212076">			<div class="accordion-inner">				<ul class="unstyled">					<li><a href="index.php?exam-master-questions">普通试题管理</a></li>					<li><a href="index.php?exam-master-rowsquestions">题帽题管理</a></li>				</ul>			</div>		</div>	</div>	<div class="accordion-group">		<div class="accordion-heading">			<a class="accordion-toggle" data-parent="#accordion-13465" data-toggle="collapse" href="#accordion-element-212096">试卷管理 </a>		</div>		<div class="accordion-body collapse" id="accordion-element-212096">			<div class="accordion-inner">				<ul class="unstyled">					<li><a href="index.php?exam-master-exams">试卷列表</a></li>					<li><a href="index.php?exam-master-exams-autopage">随机组卷</a></li>					<li><a href="index.php?exam-master-exams-selfpage">手工组卷</a></li>				</ul>			</div>		</div>	</div>	<div class="accordion-group">		<div class="accordion-heading">			<a class="accordion-toggle" data-parent="#accordion-13465" data-toggle="collapse" href="#accordion-element-212090">回收站 </a>		</div>		<div class="accordion-body collapse" id="accordion-element-212090">			<div class="accordion-inner">				<ul class="unstyled">					<li><a href="index.php?exam-master-recyle">普通试题</a></li>					<li><a href="index.php?exam-master-recyle-rows">题帽题</a></li>					<li><a href="index.php?exam-master-recyle-knows">知识点</a></li>				</ul>			</div>		</div>	</div></div>		</div>
@@ -79,117 +79,129 @@
 	            </thead>
 	            <tbody>
 	            		            	<tr>
-	                    <td>62</td>
-	                    <td></td>
-						<td></td><td>180.175.189.34</td>
-						<td>0</td><td>普通用户</td>
-						<td>2014-09-26 09:49:55</td>
+	                    <td>14</td>
+	                    <td>hongmomanu</td>
+						<td>hongmomanu@126.com</td><td>192.168.2.100</td>
+						<td>0</td><td>管理员</td>
+						<td>2015-06-08 10:15:16</td>
 						<td>
 						  	<div class="btn-group">
-	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=62&page=" title="开通课程"><em class="icon-th-list"></em></a>
+	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=14&page=" title="开通课程"><em class="icon-th-list"></em></a>
 							</div>
 						</td>
 	                </tr>
 	                	            	<tr>
-	                    <td>61</td>
-	                    <td>guke</td>
-						<td>222@163.com</td><td>180.175.189.34</td>
+	                    <td>13</td>
+	                    <td>呵呵</td>
+						<td>hongmomanu1@163.com</td><td>127.0.0.1</td>
+						<td>0</td><td></td>
+						<td>2015-06-03 09:31:29</td>
+						<td>
+						  	<div class="btn-group">
+	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=13&page=" title="开通课程"><em class="icon-th-list"></em></a>
+							</div>
+						</td>
+	                </tr>
+	                	            	<tr>
+	                    <td>12</td>
+	                    <td>121</td>
+						<td>1433208301121@yishiwang.com</td><td>127.0.0.1</td>
+						<td>0</td><td>普通用户</td>
+						<td>2015-06-02 09:25:01</td>
+						<td>
+						  	<div class="btn-group">
+	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=12&page=" title="开通课程"><em class="icon-th-list"></em></a>
+							</div>
+						</td>
+	                </tr>
+	                	            	<tr>
+	                    <td>11</td>
+	                    <td>小明</td>
+						<td>1433207388小明@yishiwang.com</td><td>127.0.0.1</td>
+						<td>0</td><td>普通用户</td>
+						<td>2015-06-02 09:09:48</td>
+						<td>
+						  	<div class="btn-group">
+	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=11&page=" title="开通课程"><em class="icon-th-list"></em></a>
+							</div>
+						</td>
+	                </tr>
+	                	            	<tr>
+	                    <td>10</td>
+	                    <td>jack</td>
+						<td>hongmomanu@163.com</td><td>127.0.0.1</td>
+						<td>0</td><td></td>
+						<td>2015-06-01 16:30:18</td>
+						<td>
+						  	<div class="btn-group">
+	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=10&page=" title="开通课程"><em class="icon-th-list"></em></a>
+							</div>
+						</td>
+	                </tr>
+	                	            	<tr>
+	                    <td>9</td>
+	                    <td>leo</td>
+						<td>1414139444leo@yishiwang.com</td><td>36.40.161.31</td>
+						<td>0</td><td>普通用户</td>
+						<td>2014-10-24 16:30:44</td>
+						<td>
+						  	<div class="btn-group">
+	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=9&page=" title="开通课程"><em class="icon-th-list"></em></a>
+							</div>
+						</td>
+	                </tr>
+	                	            	<tr>
+	                    <td>8</td>
+	                    <td>323yiyuan</td>
+						<td>1414139358323yiyuan@yishiwang.com</td><td>36.40.161.31</td>
 						<td>0</td><td>教师</td>
-						<td>2014-09-26 09:49:28</td>
+						<td>2014-10-24 16:29:18</td>
 						<td>
 						  	<div class="btn-group">
-	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=61&page=" title="开通课程"><em class="icon-th-list"></em></a>
+	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=8&page=" title="开通课程"><em class="icon-th-list"></em></a>
 							</div>
 						</td>
 	                </tr>
 	                	            	<tr>
-	                    <td>60</td>
-	                    <td>renminyiyuan</td>
-						<td>233@163.com</td><td>180.175.189.34</td>
+	                    <td>7</td>
+	                    <td>brus</td>
+						<td>1414139322brus@yishiwang.com</td><td>36.40.161.31</td>
 						<td>0</td><td>教师</td>
-						<td>2014-09-26 09:48:25</td>
+						<td>2014-10-24 16:28:42</td>
 						<td>
 						  	<div class="btn-group">
-	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=60&page=" title="开通课程"><em class="icon-th-list"></em></a>
+	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=7&page=" title="开通课程"><em class="icon-th-list"></em></a>
 							</div>
 						</td>
 	                </tr>
 	                	            	<tr>
-	                    <td>59</td>
-	                    <td>test54</td>
-						<td>112@sina.com</td><td>180.175.189.34</td>
+	                    <td>6</td>
+	                    <td>jerry</td>
+						<td>1414138040jerry@yishiwang.com</td><td>36.40.161.31</td>
+						<td>0</td><td>教师</td>
+						<td>2014-10-24 16:07:20</td>
+						<td>
+						  	<div class="btn-group">
+	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=6&page=" title="开通课程"><em class="icon-th-list"></em></a>
+							</div>
+						</td>
+	                </tr>
+	                	            	<tr>
+	                    <td>5</td>
+	                    <td>test91</td>
+						<td>1413428133@yishiwang.com</td><td>111.113.12.62</td>
 						<td>0</td><td>普通用户</td>
-						<td>2014-09-26 09:42:55</td>
+						<td>2014-10-16 10:55:33</td>
 						<td>
 						  	<div class="btn-group">
-	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=59&page=" title="开通课程"><em class="icon-th-list"></em></a>
-							</div>
-						</td>
-	                </tr>
-	                	            	<tr>
-	                    <td>58</td>
-	                    <td>test53</td>
-						<td>111@sina.com</td><td>180.175.189.34</td>
-						<td>0</td><td>普通用户</td>
-						<td>2014-09-26 09:42:55</td>
-						<td>
-						  	<div class="btn-group">
-	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=58&page=" title="开通课程"><em class="icon-th-list"></em></a>
-							</div>
-						</td>
-	                </tr>
-	                	            	<tr>
-	                    <td>57</td>
-	                    <td>test52</td>
-						<td>110@sina.com</td><td>180.175.189.34</td>
-						<td>0</td><td>普通用户</td>
-						<td>2014-09-26 09:42:54</td>
-						<td>
-						  	<div class="btn-group">
-	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=57&page=" title="开通课程"><em class="icon-th-list"></em></a>
-							</div>
-						</td>
-	                </tr>
-	                	            	<tr>
-	                    <td>56</td>
-	                    <td>admin</td>
-						<td>13215@qq.com</td><td>180.175.189.34</td>
-						<td>0</td><td>普通用户</td>
-						<td>2014-09-26 09:37:43</td>
-						<td>
-						  	<div class="btn-group">
-	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=56&page=" title="开通课程"><em class="icon-th-list"></em></a>
-							</div>
-						</td>
-	                </tr>
-	                	            	<tr>
-	                    <td>55</td>
-	                    <td>yangkui</td>
-						<td>34646546@qq.com</td><td>180.175.189.34</td>
-						<td>0</td><td>普通用户</td>
-						<td>2014-09-26 09:36:01</td>
-						<td>
-						  	<div class="btn-group">
-	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=55&page=" title="开通课程"><em class="icon-th-list"></em></a>
-							</div>
-						</td>
-	                </tr>
-	                	            	<tr>
-	                    <td>54</td>
-	                    <td>peadmin</td>
-						<td>pe@163.com</td><td>127.0.0.1</td>
-						<td>761</td><td>管理员</td>
-						<td>2013-07-14 17:21:31</td>
-						<td>
-						  	<div class="btn-group">
-	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=54&page=" title="开通课程"><em class="icon-th-list"></em></a>
+	                    		<a class="btn" href="index.php?exam-master-users-basics&userid=5&page=" title="开通课程"><em class="icon-th-list"></em></a>
 							</div>
 						</td>
 	                </tr>
 	                	        	</tbody>
 	        </table>
 	        <div class="pagination pagination-right">
-	            <ul></ul>
+	            <ul><li><a href="#" class="current">1</a></li><li><a target="" href="index.php?exam-master-users&page=2">2</a></li></ul>
 	        </div>
 		</div>
 	</div>
