--- a/exam/data/html/user/tpls/center/index.html
+++ b/exam/data/html/user/tpls/center/index.html
@@ -58,7 +58,7 @@
 				<div class="span3">
 					<div class="caption">
 						<h3>&nbsp;</h3>
-						<p>用户组：普通用户</p>
+						<p>用户组：管理员</p>
 						<p>真实姓名：</p>
 						<p>邮箱：hongmomanu@126.com</p>
 						<p>&nbsp;</p>
