--- a/exam/data/html/exam/tpls/app/basics_open.html
+++ b/exam/data/html/exam/tpls/app/basics_open.html
@@ -180,13 +180,26 @@
 		            <ul class="thumbnails">
 												<li class="span2">
 							<div class="thumbnail">
+								<a class="thumbnail" href="index.php?exam-app-basics-detail&basicid=20" title="我的考场"><img alt="300x200" src="app/exam/styles/image/paper.png" style="width:160px;"/></a>
+								<div class="caption">
+									<div class="text-center">
+										<h6>我的考场</h6>
+										<p>
+																				<a class="btn" href="javascript:;" title="我的考场">已开通</a>
+																				</p>
+									</div>
+								</div>
+							</div>
+						</li>
+																		<li class="span2">
+							<div class="thumbnail">
 								<a class="thumbnail" href="index.php?exam-app-basics-detail&basicid=19" title="fasdfas"><img alt="300x200" src="app/exam/styles/image/paper.png" style="width:160px;"/></a>
 								<div class="caption">
 									<div class="text-center">
 										<h6>fasdfas</h6>
 										<p>
-																				<a class="btn" href="javascript:;" title="fasdfas">已开通</a>
-																				</p>
+																																<a class="btn btn-success" href="index.php?exam-app-basics-detail&basicid=19" title="fasdfas">免费开通</a>
+																															</p>
 									</div>
 								</div>
 							</div>
@@ -198,8 +211,8 @@
 									<div class="text-center">
 										<h6>技巧</h6>
 										<p>
-																				<a class="btn" href="javascript:;" title="技巧">已开通</a>
-																				</p>
+																																<a class="btn btn-primary" href="index.php?exam-app-basics-detail&basicid=18" title="技巧">去开通</a>
+																															</p>
 									</div>
 								</div>
 							</div>
@@ -211,8 +224,8 @@
 									<div class="text-center">
 										<h6>考试</h6>
 										<p>
-																				<a class="btn" href="javascript:;" title="考试">已开通</a>
-																				</p>
+																																<a class="btn btn-primary" href="index.php?exam-app-basics-detail&basicid=17" title="考试">去开通</a>
+																															</p>
 									</div>
 								</div>
 							</div>
@@ -224,8 +237,8 @@
 									<div class="text-center">
 										<h6>小试卷</h6>
 										<p>
-																				<a class="btn" href="javascript:;" title="小试卷">已开通</a>
-																				</p>
+																																<a class="btn btn-success" href="index.php?exam-app-basics-detail&basicid=16" title="小试卷">免费开通</a>
+																															</p>
 									</div>
 								</div>
 							</div>
@@ -237,21 +250,8 @@
 									<div class="text-center">
 										<h6>adsfsf</h6>
 										<p>
-																				<a class="btn" href="javascript:;" title="adsfsf">已开通</a>
-																				</p>
-									</div>
-								</div>
-							</div>
-						</li>
-																		<li class="span2">
-							<div class="thumbnail">
-								<a class="thumbnail" href="index.php?exam-app-basics-detail&basicid=13" title="sdfsaf"><img alt="300x200" src="app/exam/styles/image/paper.png" style="width:160px;"/></a>
-								<div class="caption">
-									<div class="text-center">
-										<h6>sdfsaf</h6>
-										<p>
-																				<a class="btn" href="javascript:;" title="sdfsaf">已开通</a>
-																				</p>
+																																<a class="btn btn-primary" href="index.php?exam-app-basics-detail&basicid=14" title="adsfsf">去开通</a>
+																															</p>
 									</div>
 								</div>
 							</div>
@@ -260,13 +260,26 @@
 						<ul class="thumbnails">
 																		<li class="span2">
 							<div class="thumbnail">
+								<a class="thumbnail" href="index.php?exam-app-basics-detail&basicid=13" title="sdfsaf"><img alt="300x200" src="app/exam/styles/image/paper.png" style="width:160px;"/></a>
+								<div class="caption">
+									<div class="text-center">
+										<h6>sdfsaf</h6>
+										<p>
+																																<a class="btn btn-primary" href="index.php?exam-app-basics-detail&basicid=13" title="sdfsaf">去开通</a>
+																															</p>
+									</div>
+								</div>
+							</div>
+						</li>
+																		<li class="span2">
+							<div class="thumbnail">
 								<a class="thumbnail" href="index.php?exam-app-basics-detail&basicid=12" title="sdfsa"><img alt="300x200" src="app/exam/styles/image/paper.png" style="width:160px;"/></a>
 								<div class="caption">
 									<div class="text-center">
 										<h6>sdfsa</h6>
 										<p>
-																				<a class="btn" href="javascript:;" title="sdfsa">已开通</a>
-																				</p>
+																																<a class="btn btn-primary" href="index.php?exam-app-basics-detail&basicid=12" title="sdfsa">去开通</a>
+																															</p>
 									</div>
 								</div>
 							</div>
@@ -278,8 +291,8 @@
 									<div class="text-center">
 										<h6>2222</h6>
 										<p>
-																				<a class="btn" href="javascript:;" title="2222">已开通</a>
-																				</p>
+																																<a class="btn btn-success" href="index.php?exam-app-basics-detail&basicid=11" title="2222">免费开通</a>
+																															</p>
 									</div>
 								</div>
 							</div>
@@ -291,8 +304,8 @@
 									<div class="text-center">
 										<h6>临床</h6>
 										<p>
-																				<a class="btn" href="javascript:;" title="临床">已开通</a>
-																				</p>
+																																<a class="btn btn-success" href="index.php?exam-app-basics-detail&basicid=10" title="临床">免费开通</a>
+																															</p>
 									</div>
 								</div>
 							</div>
