--- a/exam/data/html/exam/tpls/master/exams_modifyauto.html
+++ b/exam/data/html/exam/tpls/master/exams_modifyauto.html
@@ -50,7 +50,7 @@
 				<div class="control-group">
 					<label class="control-label" for="content">试卷名称：</label>
 			  		<div class="controls">
-			  			<input type="text" name="args[exam]" value="技巧" needle="needle" msg="您必须为该试卷输入一个名称"/>
+			  			<input type="text" name="args[exam]" value="22" needle="needle" msg="您必须为该试卷输入一个名称"/>
 					</div>
 				</div>
 				<div class="control-group">
@@ -68,7 +68,7 @@
 				<div class="control-group">
 					<label class="control-label">考试科目：</label>
 				  	<div class="controls">
-					  	<label class="radio">技巧</label>
+					  	<label class="radio">临床</label>
 					</div>
 				</div>
 				<div class="control-group">
@@ -92,7 +92,7 @@
 				<div class="control-group">
 					<label class="control-label" for="content">及格线：</label>
 			  		<div class="controls">
-			  			<input type="text" name="args[examsetting][passscore]" value="20" size="4" needle="needle" msg="你要为本考卷设置一个及格分数线" datatype="number"/>
+			  			<input type="text" name="args[examsetting][passscore]" value="60" size="4" needle="needle" msg="你要为本考卷设置一个及格分数线" datatype="number"/>
 					</div>
 				</div>
 				
@@ -100,10 +100,10 @@
 					<label class="control-label" for="content">单选题：</label>
 					<div class="controls">
 						<span class="info">共&nbsp;</span>
-						<input id="iselectallnumber_1" type="text" class="input-mini" needle="needle" name="args[examsetting][questype][1][number]" value="1" size="2" msg="您必须填写总题数"/>
-						<span class="info">&nbsp;题，每题&nbsp;</span><input class="input-mini" needle="needle" type="text" name="args[examsetting][questype][1][score]" value="1" size="2" msg="您必须填写每题的分值"/>
-						<span class="info">&nbsp;分，描述&nbsp;</span><input class="input-mini" type="text" name="args[examsetting][questype][1][describe]" value="" size="12"/>
-						<span class="info">&nbsp;难度题数：易&nbsp;</span><input class="input-mini" type="text" name="args[examsetting][questype][1][easynumber]" value="0" size="2" msg="您需要填写简单题的数量，最小为0"/>
+						<input id="iselectallnumber_1" type="text" class="input-mini" needle="needle" name="args[examsetting][questype][1][number]" value="10" size="2" msg="您必须填写总题数"/>
+						<span class="info">&nbsp;题，每题&nbsp;</span><input class="input-mini" needle="needle" type="text" name="args[examsetting][questype][1][score]" value="10" size="2" msg="您必须填写每题的分值"/>
+						<span class="info">&nbsp;分，描述&nbsp;</span><input class="input-mini" type="text" name="args[examsetting][questype][1][describe]" value="1" size="12"/>
+						<span class="info">&nbsp;难度题数：易&nbsp;</span><input class="input-mini" type="text" name="args[examsetting][questype][1][easynumber]" value="10" size="2" msg="您需要填写简单题的数量，最小为0"/>
 	  					<span class="info">&nbsp;中&nbsp;</span><input class="input-mini" type="text" needle="needle" name="args[examsetting][questype][1][middlenumber]" value="0" size="2" msg="您需要填写中等难度题的数量，最小为0"/>
 	  					<span class="info">&nbsp;难&nbsp;</span><input class="input-mini" type="text" needle="needle" name="args[examsetting][questype][1][hardnumber]" value="0" size="2" datatype="number" msg="您需要填写难题的数量，最小为0"/>
 					</div>
@@ -114,8 +114,8 @@
 						<button class="btn btn-primary" type="submit">提交</button>
 						<input type="hidden" name="submitsetting" value="1"/>
 					  	<input type="hidden" name="page" value="" />
-					  	<input name="args[examsubject]" type="hidden" value="8">
-					  	<input name="examid" type="hidden" value="8">
+					  	<input name="args[examsubject]" type="hidden" value="4">
+					  	<input name="examid" type="hidden" value="5">
 					    
 					</div>
 				</div>
