--- a/exam/data/html/user/tpls/center/modifyuser.html
+++ b/exam/data/html/user/tpls/center/modifyuser.html
@@ -31,7 +31,7 @@
 <script type="text/javascript" src="app/core/styles/js/swfu/swfupload.js"></script>
 <script type="text/javascript" src="app/core/styles/js/plugin.js"></script>
 </head><body>
-<div class="navbar navbar-inverse">	<div class="navbar-inner">		<div class="container-fluid">			<button data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar" type="button"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>			<a href="index.php" target="_blank" class="brand"><img src="app/core/styles/images/favicon.png">用户中心</a>			<div class="nav-collapse navbar-responsive-collapse collapse">				<ul class="nav">				</ul>				<ul class="nav pull-right">					<li>						<a href="index.php">考试系统首页</a>					</li>					<li class="divider-vertical">					</li>					<li class="dropdown">						<a data-toggle="dropdown" class="dropdown-toggle" href="#">yangkui<strong class="caret"></strong></a>						<ul class="dropdown-menu">							<!--							<li>								<a href="index.php?user-app-privatement">个人中心</a>							</li>							<li class="divider">							</li>							-->							<li>								<a href="index.php?user-app-logout">退出管理</a>							</li>						</ul>					</li>				</ul>			</div>		</div>	</div></div><div class="container-fluid">
+<div class="navbar navbar-inverse">	<div class="navbar-inner">		<div class="container-fluid">			<button data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar" type="button"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>			<a href="index.php" target="_blank" class="brand"><img src="app/core/styles/images/favicon.png">用户中心</a>			<div class="nav-collapse navbar-responsive-collapse collapse">				<ul class="nav">				</ul>				<ul class="nav pull-right">					<li>						<a href="index.php">考试系统首页</a>					</li>					<li class="divider-vertical">					</li>					<li class="dropdown">						<a data-toggle="dropdown" class="dropdown-toggle" href="#">hongmomanu<strong class="caret"></strong></a>						<ul class="dropdown-menu">							<!--							<li>								<a href="index.php?user-app-privatement">个人中心</a>							</li>							<li class="divider">							</li>							-->							<li>								<a href="index.php?user-app-logout">退出管理</a>							</li>						</ul>					</li>				</ul>			</div>		</div>	</div></div><div class="container-fluid">
 	<div class="row-fluid">
 		<div class="span2">
 			<ul class="nav nav-tabs nav-stacked">	<li>		<a href="index.php?user-app">首页</a>	</li>	<li class="active">		<a href="index.php?user-center-privatement">隐私管理</a>	</li>	<li>		<a href="index.php?user-center-payfor">充值积分</a>	</li></ul>		</div>
@@ -53,7 +53,14 @@
 					<div id="panel-344373" class="tab-pane active">
 						<form action="index.php?user-center-privatement" method="post" class="form-horizontal">
 							<fieldset>
-								<legend>yangkui</legend>
+								<legend>hongmomanu</legend>
+																<div class="control-group">
+									<label for="manager_apps" class="control-label">可管理模块：</label>
+									<div class="controls">
+									<select value="" name="args[manager_apps]" id="manager_apps" ><option value='user'>用户</option>
+<option value='content'>内容</option>
+</select>									</div>
+								</div>
 																<div class="control-group">
 									<label for="usertruename" class="control-label">真实姓名：</label>
 									<div class="controls">
@@ -63,11 +70,6 @@
 									<label for="photo" class="control-label">用户肖像：</label>
 									<div class="controls">
 									<div class="thumbuper pull-left"><div class="thumbnail"><a href="javascript:;" class="second label"><em class="uploadbutton" id="photo" exectype="thumb"></em></a><div class="first" id="photo_percent"></div><div class="boot"><img src="app/core/styles/images/noimage.gif" id="photo_view"/><input type="hidden" name="args[photo]" value="" id="photo_value"/></div></div></div>									</div>
-								</div>
-																<div class="control-group">
-									<label for="normal_favor" class="control-label">爱好：</label>
-									<div class="controls">
-									<label class="checkbox inline"><input type="checkbox" name="args[normal_favor][]" id="normal_favor" value="吃" />吃</label><label class="checkbox inline"><input type="checkbox" name="args[normal_favor][]" id="normal_favor" value="喝" />喝</label><label class="checkbox inline"><input type="checkbox" name="args[normal_favor][]" id="normal_favor" value="拉" />拉</label><label class="checkbox inline"><input type="checkbox" name="args[normal_favor][]" id="normal_favor" value="撒" />撒</label><label class="checkbox inline"><input type="checkbox" name="args[normal_favor][]" id="normal_favor" value="睡" />睡</label>									</div>
 								</div>
 																<div class="control-group">
 									<div class="controls">
@@ -82,7 +84,7 @@
 					<div id="panel-788885" class="tab-pane">
 						<form action="index.php?user-center-privatement" method="post" class="form-horizontal">
 							<fieldset>
-								<legend>yangkui</legend>
+								<legend>hongmomanu</legend>
 								<div class="control-group">
 									<label for="oldpassowrd" class="control-label">旧密码：</label>
 									<div class="controls">
