--- a/exam/data/html/user/tpls/center/payfor.html
+++ b/exam/data/html/user/tpls/center/payfor.html
@@ -31,7 +31,7 @@
 <script type="text/javascript" src="app/core/styles/js/swfu/swfupload.js"></script>
 <script type="text/javascript" src="app/core/styles/js/plugin.js"></script>
 </head><body>
-<div class="navbar navbar-inverse">	<div class="navbar-inner">		<div class="container-fluid">			<button data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar" type="button"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>			<a href="index.php" target="_blank" class="brand"><img src="app/core/styles/images/favicon.png">用户中心</a>			<div class="nav-collapse navbar-responsive-collapse collapse">				<ul class="nav">				</ul>				<ul class="nav pull-right">					<li>						<a href="index.php">考试系统首页</a>					</li>					<li class="divider-vertical">					</li>					<li class="dropdown">						<a data-toggle="dropdown" class="dropdown-toggle" href="#"><strong class="caret"></strong></a>						<ul class="dropdown-menu">							<!--							<li>								<a href="index.php?user-app-privatement">个人中心</a>							</li>							<li class="divider">							</li>							-->							<li>								<a href="index.php?user-app-logout">退出管理</a>							</li>						</ul>					</li>				</ul>			</div>		</div>	</div></div><div class="container-fluid">
+<div class="navbar navbar-inverse">	<div class="navbar-inner">		<div class="container-fluid">			<button data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar" type="button"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>			<a href="index.php" target="_blank" class="brand"><img src="app/core/styles/images/favicon.png">用户中心</a>			<div class="nav-collapse navbar-responsive-collapse collapse">				<ul class="nav">				</ul>				<ul class="nav pull-right">					<li>						<a href="index.php">考试系统首页</a>					</li>					<li class="divider-vertical">					</li>					<li class="dropdown">						<a data-toggle="dropdown" class="dropdown-toggle" href="#">hongmomanu<strong class="caret"></strong></a>						<ul class="dropdown-menu">							<!--							<li>								<a href="index.php?user-app-privatement">个人中心</a>							</li>							<li class="divider">							</li>							-->							<li>								<a href="index.php?user-app-logout">退出管理</a>							</li>						</ul>					</li>				</ul>			</div>		</div>	</div></div><div class="container-fluid">
 	<div class="row-fluid">
 		<div class="span2">
 			<ul class="nav nav-tabs nav-stacked">	<li>		<a href="index.php?user-app">首页</a>	</li>	<li>		<a href="index.php?user-center-privatement">隐私管理</a>	</li>	<li class="active">		<a href="index.php?user-center-payfor">充值积分</a>	</li></ul>		</div>
@@ -53,32 +53,6 @@
 							</tr>
 						</thead>
 						<tbody>
-														<tr>
-								<td>201409261333310</td>
-								<td>99999999.99</td>
-								<td>2014-09-26</td>
-								<td>待付款</td>
-								<td>
-									<div class="btn-group">
-										<a class="btn" href="index.php?user-center-payfor-orderdetail&ordersn=201409261333310" title="详细"><em class="icon-th-list"></em></a>
-																				<a class="btn" href="index.php?user-center-payfor-orderdetail&ordersn=201409261333310" title="支付"><em class="icon-shopping-cart"></em></a>
-										<a class="btn ajax" href="index.php?user-center-payfor-remove&ordersn=201409261333310" title="撤单"><em class="icon-remove"></em></a>
-																			</div>
-								</td>
-							</tr>
-														<tr>
-								<td>201409261313971</td>
-								<td>100.00</td>
-								<td>2014-09-26</td>
-								<td>待付款</td>
-								<td>
-									<div class="btn-group">
-										<a class="btn" href="index.php?user-center-payfor-orderdetail&ordersn=201409261313971" title="详细"><em class="icon-th-list"></em></a>
-																				<a class="btn" href="index.php?user-center-payfor-orderdetail&ordersn=201409261313971" title="支付"><em class="icon-shopping-cart"></em></a>
-										<a class="btn ajax" href="index.php?user-center-payfor-remove&ordersn=201409261313971" title="撤单"><em class="icon-remove"></em></a>
-																			</div>
-								</td>
-							</tr>
 													</tbody>
 					</table>
 					<div class="pagination pagination-right">
